Fixing layout issue (top part of content pane is behind the toolbar)

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ p {
 }
 
 .jt-content {
-  position:absolute;
   width:100%;
 }
 
